@@ -1,3 +1,10 @@
+2013-03-11  Roland McGrath  <roland@hack.frob.com>
+
+	* sysdeps/arm/armv6t2/memchr.S: Change register allocation so ldrd use
+	is r4,r5 rather than r5,r6.
+	[NO_THUMB]: Use .arm rather than .thumb, .thumb_func.
+	Avoid cbz/cnbz instructions.
+
 2013-01-02  Joseph Myers  <joseph@codesourcery.com>
 
 	* README: Update copyright dates in example.
